# RAGognizer

./: .env.sample  .gitignore  LICENSE  README.md
fine-tuning/: demo_ft.sh  ft.py  inference_demo.py  install.sh  requirements.txt
ragognize/: 00_wikipedia_scraper.py  01_extract_suitable_articles.py  install.sh  requirements.txt  run.sh
ragognize/02_qa_generation/: filter_user_prompts.py  generate_user_prompts.py  user_prompt_generator.py
ragognize/03_prompt_generation/: generate_rag_prompts.py  prompt_template_randomizer.py
ragognize/04_llm_responses/: add_samples_to_ragonize.py  annotate_outputs.py  generate_outputs.py  merge.py
ragognize/utils/: __init__.py  llama.py  llm.py  mistral.py  rate_limiter.py  shd_SimpleChatTokenLevel.py  structured_output_llm.py  supervised_hallucination_detector.py
ragognizer/: app.py  pyproject.toml
ragognizer/ragognizer/benchmarks/: RAGTruth.py  RAGognize.py  benchmark.py  llm_inference.py
ragognizer/ragognizer/detectors/: RAGognizer.py  detector.py
